tela Configuração: adicionou datePicker

--- a/TabbarFilmesDeTerror/Base.lproj/Main.storyboard
+++ b/TabbarFilmesDeTerror/Base.lproj/Main.storyboard
@@ -269,19 +269,49 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="216"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wj7-Bt-klG">
+                                <rect key="frame" x="20" y="676" width="374" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTo-lS-ifQ">
+                                <rect key="frame" x="20" y="650" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="Jgg-aV-MNH">
+                                <rect key="frame" x="0.0" y="360" width="414" height="216"/>
+                                <connections>
+                                    <action selector="assistirProximoFilme:" destination="BXv-SE-5qQ" eventType="valueChanged" id="8GX-pd-nV1"/>
+                                </connections>
+                            </datePicker>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="G3G-KC-gDt"/>
-                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
+                            <constraint firstItem="wj7-Bt-klG" firstAttribute="top" secondItem="Jgg-aV-MNH" secondAttribute="bottom" constant="100" id="48x-aX-h87"/>
                             <constraint firstItem="fqd-bL-pEG" firstAttribute="top" secondItem="G3G-KC-gDt" secondAttribute="top" id="4oG-QN-apR"/>
+                            <constraint firstItem="Jgg-aV-MNH" firstAttribute="top" secondItem="fqd-bL-pEG" secondAttribute="bottom" constant="100" id="5EU-Fu-Yh1"/>
                             <constraint firstItem="fqd-bL-pEG" firstAttribute="trailing" secondItem="G3G-KC-gDt" secondAttribute="trailing" id="DnX-jg-DIt"/>
+                            <constraint firstItem="G3G-KC-gDt" firstAttribute="trailing" secondItem="wj7-Bt-klG" secondAttribute="trailing" constant="20" id="DyB-Cn-Qdc"/>
+                            <constraint firstItem="G3G-KC-gDt" firstAttribute="trailing" secondItem="pTo-lS-ifQ" secondAttribute="trailing" constant="20" id="WCY-4A-3e5"/>
+                            <constraint firstItem="Jgg-aV-MNH" firstAttribute="leading" secondItem="G3G-KC-gDt" secondAttribute="leading" id="aLH-xk-a7Y"/>
+                            <constraint firstItem="wj7-Bt-klG" firstAttribute="top" secondItem="pTo-lS-ifQ" secondAttribute="bottom" constant="5" id="eEU-Dk-bDR"/>
                             <constraint firstItem="fqd-bL-pEG" firstAttribute="leading" secondItem="G3G-KC-gDt" secondAttribute="leading" id="hj6-1x-8Ka"/>
+                            <constraint firstItem="pTo-lS-ifQ" firstAttribute="leading" secondItem="G3G-KC-gDt" secondAttribute="leading" constant="20" id="mmy-Yw-EAn"/>
+                            <constraint firstItem="wj7-Bt-klG" firstAttribute="leading" secondItem="G3G-KC-gDt" secondAttribute="leading" constant="20" id="nvX-g0-sWH"/>
+                            <constraint firstItem="Jgg-aV-MNH" firstAttribute="trailing" secondItem="G3G-KC-gDt" secondAttribute="trailing" id="pxO-qq-MRU"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Confiigurações" id="PPU-KA-3Qg"/>
                     <connections>
+                        <outlet property="datePicker" destination="Jgg-aV-MNH" id="9b1-UL-6lB"/>
+                        <outlet property="datePickerLabel" destination="wj7-Bt-klG" id="ACQ-H9-cQO"/>
                         <outlet property="pickerView" destination="fqd-bL-pEG" id="94e-RS-jQH"/>
                         <outlet property="pickerViewHumor" destination="fqd-bL-pEG" id="i3I-OF-xPK"/>
+                        <outlet property="proximaDataLabel" destination="pTo-lS-ifQ" id="B8c-2E-Pbv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2MI-Ht-8qV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -497,8 +527,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
